www/src/features/portfolio/one-up/one-up.less
section.one-up {
    height: 0;
    overflow: hidden;
    position: relative;

    @size_nav: @height_nav-main * @r2;
    @size_nav-pip: @height_nav-main;

    .gallery, article.oeuvre {
        width: 100%;
    }

    .gallery {
        height: 100%;
        display: flex;
        flex-flow: row nowrap;
        position: relative;
        transition: left @quick ease-in-out;
    }

    .viewport {
        width: 100%;
        height: 100%;
        flex: 0 0 auto;
        overflow-x: hidden;
        overflow-y: auto;
        box-sizing: border-box;
        padding-bottom: @size_nav;
    }

    article.oeuvre {
        height: 100%;
        display: flex;
        flex-flow: row wrap;
        align-content: flex-start;
        justify-content: center;
        max-width: @width_page * 1.5;
        margin: 0 auto;

        @media (min-width: (@width_page * @rem)){
            align-items: center;
            figure, .copy {
                flex-basis: 40%;
            }
        }

        figure, .copy {
            box-sizing: border-box;
            padding: 1rem;
        }

        .copy {
            white-space: normal;

            max-width: 30em;

            @media (max-width: (@width_page * @rem)){
                padding-bottom: 1rem + @size_nav;
            }

            p {
                .lato(1, regular);
                margin-top: @rr2 * 1em;
            }

            a {
                text-decoration: underline;
            }

            h6 {
                .lato(1, light);
                text-transform: uppercase;
                margin-bottom: @rr2 * @rr2 * 1em;
            }

            h2 {
                .lato(2, black);
                margin-bottom: @rr2 * @rr2 * 1em;
            }

            .roles {
                .lato(1, regular);
                font-style: italic;

                label, ul, ul li {
                    display: inline;
                }

                ul li {
                    &::after {
                        content: ', ';
                    }

                    &:last-child::after {
                        content: '.';
                    }
                }
            }
        }

        @media (max-width: (@width_page * @rem)){
            figure {
                padding-bottom: 0;
            }
        }

    }

    &.active {
        max-height: 100%;
        box-sizing: border-box;

        figure, .copy {
            flex: 1 0 auto;
        }

        figure {
            &, img, video {
                width: 100%;
            }

            img, video {
                box-sizing: border-box;
                background: @ink;
                border: 1rem solid @ink;
                position: static;
                max-width: 100%;
                height: auto;
            }
        }

        div.copy {
            width: 100%;
        }

    }

    nav.project {
        position: absolute;
        bottom: 0; left: 0; right: 0;
        height: @size_nav;
        padding: .5rem 0;
        display: flex;
        justify-content: center;
        align-items: center;
        background-color: fade(@light, 60%);

        button {
            background-color: fade(white, 67%);
            background-clip: content-box;
            box-sizing: border-box;
            height: @size_nav-pip;
            width: @size_nav-pip;
            flex: 0 0 auto;
            .circular();
            .bg(50%);
            &.up {
                background-image: url('../images/up.svg');
            }
            &.next {
                background-image: url('../images/next.svg');
            }
        }

        ul {
            flex: 0 1 auto;
            height: 100%;
            display: flex;
            align-items: center;

            li {
                flex: 0 0 auto;

                a {
                    display: block;
                    height: @size_nav-pip;
                    width: @size_nav-pip;
                    background-color: lighten(@ink, 33%);
                    background-blend-mode: multiply;
                    .circular();
                    .bg();
                    .hover-shadow(fade(@red, 20%));
                    transition: height @quick ease, width @quick ease, box-shadow @quick ease;

                    &:hover, &:focus {
                        .hover-shadow-active(fade(@red, 20%));
                    }
                }
            }
        }

        button, ul li a {
            margin: (@size_nav-pip/8);
            @media (min-width: (@width_page * @rem)) {
                margin: (@size_nav-pip/6);
            }
        }
    }

    .highlight-nav-item(@i) when (@i > 0) {
        &[data-active="@{i}"]{
            nav.project ul li:nth-child(@{i}) a {
                .active-shadow(fade(@red, 80%));
            }
            .gallery {
                left: (@i - 1) * -100%;
            }
        }
        .highlight-nav-item(@i - 1);
    }
    .highlight-nav-item(10);

    img, video {
        position: fixed;
        width: 1rem;
        height: 1rem;
        top: -10rem;
        left: -10rem;
    }

}

